--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -7,14 +7,14 @@
 a,
 .green {
   text-decoration: none;
-  color: hsla(160, 100%, 37%, 1);
+  color: rgb(193, 193, 193);
   transition: 0.4s;
   padding: 3px;
 }
 
 @media (hover: hover) {
   a:hover {
-    background-color: hsla(160, 100%, 37%, 0.2);
+    background-color: hsla(212, 100%, 37%, 0.2);
   }
 }
 
